test_suite/tests/ui/expected-string/byte_character.stderr
error: expected serde rename attribute to be a string or integer: `rename = ...`
 --> tests/ui/expected-string/byte_character.rs:5:22
  |
5 |     #[serde(rename = b'a')]
  |                      ^^^^
